# achat

./: Cargo.toml  README.md  generate_docs.sh
.github/workflows/: rust.yml
docs/: crates.js  index.html  search-index.js  settings.html  source-files.js
docs/achat/: all.html  fn.init_console_subscriber.html  index.html  sidebar-items.js  struct.Args.html
docs/adler/: all.html  fn.adler32_slice.html  index.html  struct.Adler32.html
docs/anyhow/: all.html  fn.Ok.html  index.html  macro.anyhow.html  macro.bail.html  macro.ensure.html  struct.Chain.html  struct.Error.html  trait.Context.html  type.Result.html
docs/async_stream/: all.html  index.html  macro.stream.html  macro.try_stream.html
docs/async_stream_impl/: all.html  index.html
docs/async_trait/: all.html  attr.async_trait.html  index.html
docs/atty/: all.html  enum.Stream.html  fn.is.html  fn.isnt.html  index.html
docs/axum/: all.html  index.html  sidebar-items.js  struct.Error.html  struct.Extension.html  struct.Router.html  type.BoxError.html
docs/axum_core/: all.html  index.html  sidebar-items.js  struct.Error.html  type.BoxError.html
docs/base64/: all.html  constant.BCRYPT.html  constant.BINHEX.html  constant.CRYPT.html  constant.IMAP_MUTF7.html  constant.STANDARD.html  constant.STANDARD_NO_PAD.html  constant.URL_SAFE.html  constant.URL_SAFE_NO_PAD.html  enum.CharacterSet.html  enum.DecodeError.html  fn.decode.html  fn.decode_config.html  fn.decode_config_buf.html  fn.decode_config_slice.html  fn.encode.html  fn.encode_config.html  fn.encode_config_buf.html  fn.encode_config_slice.html  index.html  struct.Config.html
docs/bytes/: all.html  index.html  struct.Bytes.html  struct.BytesMut.html  trait.Buf.html  trait.BufMut.html
docs/chat/: all.html  fn.main.html  index.html
docs/chat_with_announce/: all.html  fn.main.html  index.html
docs/chat_with_cancel/: all.html  fn.main.html  index.html
docs/clap/: all.html  enum.AppSettings.html  enum.ArgSettings.html  enum.ColorChoice.html  enum.ErrorKind.html  enum.ValueHint.html  enum.ValueSource.html  index.html  macro.arg.html  macro.command.html  struct.App.html  struct.Arg.html  struct.ArgGroup.html  struct.ArgMatches.html  struct.Indices.html  struct.OsValues.html  struct.PossibleValue.html  struct.Values.html  trait.ArgEnum.html  trait.Args.html  trait.CommandFactory.html  trait.FromArgMatches.html  trait.IntoApp.html  trait.Parser.html  trait.Subcommand.html  type.Command.html
docs/clap_derive/: all.html  derive.ArgEnum.html  derive.Args.html  derive.Parser.html  derive.Subcommand.html  index.html
docs/clap_lex/: all.html  enum.SeekFrom.html  index.html  struct.ArgCursor.html  struct.ParsedArg.html  struct.RawArgs.html  (+3 more)
src/: arguments.rs  chat.rs  chat_with_announce.rs  chat_with_cancel.rs  collector.rs  echo.rs  lib.rs
(+10924 files in other folders)
