[package]
name = "achat"
version = "0.1.0"
edition = "2021"
description = "Super simple tokio chat server for educational purposes."
repository = "https://github.com/barafael/achat"
license = "Apache-2.0"
default-run = "chat"

[[bin]]
name = "chat"
path = "bin/chat.rs"

[[bin]]
name = "dump_client"
path = "bin/dump_client.rs"

[[bin]]
name = "echo"
path = "bin/echo.rs"

[[bin]]
name = "collector"
path = "bin/collector.rs"

[[bin]]
name = "chat_with_announce"
path = "bin/chat_with_announce.rs"

[[bin]]
name = "chat_with_cancel"
path = "bin/chat_with_cancel.rs"

[[bin]]
name = "dump_gui"
path = "bin/dump_client_gui.rs"

[[bin]]
name = "client"
path = "bin/client.rs"

[[bin]]
name = "client_2"
path = "bin/client_2.rs"

[[bin]]
name = "client_3"
path = "bin/client_3.rs"

[dev-dependencies]
tokio-test = "0.4.2"

[dependencies]
anyhow = "1.0.58"
bytes = "1.2.1"
clap = { version = "3.2.8", features = ["derive"] }
console-subscriber = "0.1.6"
futures = "0.3.21"
klask = { git = "https://github.com/barafael/klask" }
readwrite = { version = "0.2.0", features = ["tokio"] }
serde_json = "1.0.82"
tokio = { version = "1.19.2", features = [
    "io-util",
    "macros",
    "net",
    "rt",
    "rt-multi-thread",
    "sync",
    "time",
    "tracing",
] }
tokio-util = "0.7.3"
