[package]
name = "achat"
version = "0.1.0"
edition = "2021"
description = "Super simple tokio chat server for educational purposes."
repository = "https://github.com/barafael/achat"
license = "Apache-2.0"
default-run = "chat"

[dev-dependencies]
tokio-test = "0.4.2"

[dependencies]
anyhow = "1.0.68"
bytes = "1.3.0"
clap = { version = "3.2.23", features = ["derive"] }
console-subscriber = "0.1.8"
futures = "0.3.25"
klask = "1"
readwrite = { version = "0.2.0", features = ["tokio"] }
serde_json = "1.0.91"
tokio = { version = "1.24.1", features = [
    "io-util",
    "macros",
    "net",
    "rt",
    "rt-multi-thread",
    "sync",
    "time",
    "tracing",
] }
tokio-util = "0.7.4"
