[package]
name = "achat"
version = "0.1.0"
edition = "2021"
description = "Super simple tokio chat server for educational purposes."
repository = "https://github.com/barafael/achat"
license = "Apache-2.0"
default-run = "chat"

[dev-dependencies]
tokio-test = "0.4.2"

[dependencies]
anyhow = "1.0.71"
bytes = "1.4.0"
clap = { version = "3.2.25", features = ["derive"] }
console-subscriber = "0.1.9"
futures = "0.3.28"
klask = "1"
readwrite = { version = "0.2.0", features = ["tokio"] }
serde_json = "1.0.96"
tokio = { version = "1.28.2", features = [
    "io-util",
    "macros",
    "net",
    "rt",
    "rt-multi-thread",
    "sync",
    "time",
    "tracing",
] }
tokio-util = "0.7.8"
